@startuml

entity "suite" as suite {
suite_id: UUID primary key
---
suite_name: varchar(128) not null
suite_root_id: UUID not null
suite_description: varchar(1024)
}

entity "test_case" as test_case {
test_case_id: UUID primary key
---
case_name: varchar(128) not null
suite_id: UUID not null
automation_status: varchar(128) not null
layer: varchar(128) not null
}
entity "project" as project {
project_id: UUID primary key
---
project_name: varchar(128) not null
project_description: varchar(1024)
}
entity "test_plan" as test_plan{
test_plan_id: UUID primary key
test_plan_description: varchar(1024)
}
entity "test_run" as test_run{
test_run_id: UUID primary key
---
test_name: varchar(128)
test_plan: UUID FK
}
entity test_cases_in_test_plan{
test_run_id: UUID
test_case_id: UUID
}
entity user{
user_id: UUID primary key
---
surname: varchar(128) not null
name: varchar(128) not null
user_password: varchar(128) not null
}
entity users_in_projects{
project_id: UUID FK
user_id: UUID FK
role_id: UUID FK
}
entity role{
role_id: UUID primary key
---
role_name: varchar(128) not null
}
entity test_step{
test_step_id: UUID
---
step_description: varchar(128) not null
test_case_id : UUID FK
step_data: varchar(4096) not null
step_result: varchar(4096) not null
}
test_case||--o{test_step
test_plan}|--|{test_run
users_in_projects}|--|{role
users_in_projects}|--|{project
users_in_projects}|--|{user
test_case}|--|{test_cases_in_test_plan
test_plan}|--|{test_cases_in_test_plan
test_case}o--||suite
@enduml